otp: Make most build artifacts deterministic

--- a/erts/lib_src/Makefile.in
+++ b/erts/lib_src/Makefile.in
@@ -362,10 +362,11 @@ AR_FLAGS=
 else
 AR_OUT=
 ifeq ($(V),0)
-AR_FLAGS=rc
+AR_FLAGS=rcD
 else
-AR_FLAGS=rcv
+AR_FLAGS=rcvD
 endif
+RANLIB_FLAGS=-D
 endif
 
 ifndef RANLIB
@@ -374,39 +375,39 @@ endif
 
 $(ETHREAD_LIB): $(ETHREAD_LIB_OBJS)
 	$(V_AR) $(AR_FLAGS) $(AR_OUT)$@ $(ETHREAD_LIB_OBJS)
-	$(V_RANLIB) $@
+	$(V_RANLIB) $(RANLIB_FLAGS) $@
 
 $(ERTS_INTERNAL_LIB): $(ERTS_INTERNAL_LIB_OBJS)
 	$(V_AR) $(AR_FLAGS) $(AR_OUT)$@ $(ERTS_INTERNAL_LIB_OBJS)
-	$(V_RANLIB) $@
+	$(V_RANLIB) $(RANLIB_FLAGS) $@
 
 $(ERTS_INTERNAL_r_LIB): $(ERTS_INTERNAL_r_LIB_OBJS)
 	$(V_AR) $(AR_FLAGS) $(AR_OUT)$@ $(ERTS_INTERNAL_r_LIB_OBJS)
-	$(V_RANLIB) $@
+	$(V_RANLIB) $(RANLIB_FLAGS) $@
 
 $(ERTS_MD_LIB): $(ERTS_MD_LIB_OBJS)
 	$(V_AR) $(AR_FLAGS) $(AR_OUT)$@ $(ERTS_MD_LIB_OBJS)
-	$(V_RANLIB) $@
+	$(V_RANLIB) $(RANLIB_FLAGS) $@
 
 $(ERTS_MDd_LIB): $(ERTS_MDd_LIB_OBJS)
 	$(V_AR) $(AR_FLAGS) $(AR_OUT)$@ $(ERTS_MDd_LIB_OBJS)
-	$(V_RANLIB) $@
+	$(V_RANLIB) $(RANLIB_FLAGS) $@
 
 $(ERTS_MT_LIB): $(ERTS_MT_LIB_OBJS)
 	$(V_AR) $(AR_FLAGS) $(AR_OUT)$@ $(ERTS_MT_LIB_OBJS)
-	$(V_RANLIB) $@
+	$(V_RANLIB) $(RANLIB_FLAGS) $@
 
 $(ERTS_MTd_LIB): $(ERTS_MTd_LIB_OBJS)
 	$(V_AR) $(AR_FLAGS) $(AR_OUT)$@ $(ERTS_MTd_LIB_OBJS)
-	$(V_RANLIB) $@
+	$(V_RANLIB) $(RANLIB_FLAGS) $@
 
 $(ERTS_r_LIB): $(ERTS_r_LIB_OBJS)
 	$(V_AR) $(AR_FLAGS) $(AR_OUT)$@ $(ERTS_r_LIB_OBJS)
-	$(V_RANLIB) $@
+	$(V_RANLIB) $(RANLIB_FLAGS) $@
 
 $(ERTS_LIB): $(ERTS_LIB_OBJS)
 	$(V_AR) $(AR_FLAGS) $(AR_OUT)$@ $(ERTS_LIB_OBJS)
-	$(V_RANLIB) $@
+	$(V_RANLIB) $(RANLIB_FLAGS) $@
 
 #
 # Object files
